uplift web driver manager and add screenshot func